fixes in hero section to make spacing even

--- a/src/Hero.css
+++ b/src/Hero.css
@@ -24,7 +24,7 @@
   color: white;
   font-family: 'Orbitron', sans-serif;
   margin-bottom: 0;
-  margin-top: -20rem;  /* NEW */
+  margin-top: -10rem;  /* NEW */
   padding-top: 0;
 }
 
@@ -235,6 +235,7 @@
   .hack-title {
     font-size: 8rem;
     letter-spacing: 0.7rem;
+    gap:0;
   }
 
   .top-text {
@@ -293,7 +294,7 @@
   }
   .hack-title {
     font-size: clamp(2.5rem, 8vw, 10rem);
-    letter-spacing: 0.2rem;
+    letter-spacing: 0.15rem;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
@@ -301,6 +302,7 @@
     left: 0 !important;
     margin: 0 auto 1rem auto;
     width: 100%;
+    gap:0;
   }
 
   .top-text {
